# Inventory-Management-Dashboard

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
website/: __init__.py  application.py  auth.py  endpoints.py  helpers.py  inventory.db  models.py  views.py
website/templates/: add.html  delete.html  edit.html  index.html  layout.html  login.html  register.html  variance_calculator.html
