[tool.poetry]
name = "repl_python3_finalprojectv2"
version = "0.1.0"
description = ""
authors = ["AdityaGanatra <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy-serializer = "^1.4.1"
Werkzeug = "^2.2.3"
Flask = "^2.1.2"
Flask-Login = "^0.6.1"
Flask-Session = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
